# Memd

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
public/: logo.xcf
src/: App.css  App.tsx  app-sidebar.tsx  chat.tsx  graph.tsx  layout.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml  config_android.toml
src-tauri/capabilities/: default.json
src-tauri/crates/memd_rag/: Cargo.toml
src-tauri/crates/memd_rag/migration/: V1__initial.sql  V2__embedding.sql
src-tauri/crates/memd_rag/src/: bert.rs  cache.rs  database.rs  lib.rs  llm.rs  main.rs  operation.rs  reader.rs  shm.rs  sqlite.rs
src-tauri/crates/memd_rag/src/component/: cache.rs  cloud_model.rs  database.rs  deepseek.rs  llm.rs  mod.rs  operation.rs  sqlite.rs
src-tauri/crates/memd_rag/src/controller/: mock_router.rs  mod.rs  router.rs
src-tauri/crates/memd_rag/src/index/: buffer_pool.rs  executor.rs  index_file.rs  mod.rs  page.rs  shm_adapter.rs  usearch_adapter.rs
src-tauri/crates/memd_rag/src/method/: cluster.rs  hippo_rag.rs  memd_agent.rs  mod.rs  naive_rag.rs  no_rag.rs
src-tauri/crates/memd_server/: Cargo.toml
src-tauri/crates/memd_server/src/: lib.rs  metric.rs
src-tauri/crates/memd_server/src/controller/: mock_router.rs  mod.rs  router.rs
src-tauri/icons/: icon.icns
src-tauri/src/: bert.rs  data.rs  db.rs  lib.rs  llm.rs  local.rs  main.rs  relation.rs
src-tauri/src/data/: mod.rs  sqlite.rs
src-tauri/src/offline/: data.rs  llm.rs  mod.rs  sqlite.rs
src-tauri/src/online/: mod.rs
src/components/ui/: sidebar.tsx
src/data/: example.json  example.ts  node.tsx
tools/android/: android.fish  android_build.sh  change_arm.sh
tools/bench/: .gitignore  README.md  bench_beir.py  bench_prefeval.py  client.py  config.py  llm_judge.py  main.py  model.py  pyproject.toml
tools/bench/datasets/tinyqa/: corpus.jsonl  queries.jsonl
tools/bench/datasets/tinyqa/qrels/: test.tsv
tools/bench/plot/: memory_usage.py
tools/bench/prefeval/: baselines_handling_classification.py  benchmark_classification.py
tools/bench/prefeval/utils/: common_utils.py  data_loading_utils.py  utils_mcq.py
tools/bench/script/: standard_test.sh  test_dev_prefeval.sh  test_dev_qa.sh  test_dev_retrieve.sh
