[package]
name = "memd"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = ["crates/*"]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "memd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = { version = "2", features = ["blocking", "multipart"] }
anyhow = "1.0.94"
tokio = { version = "1.42.0", features = ["full"] }
tauri-plugin-dialog = "2"
tokio-util = "0.7.13"

# AI
candle-transformers = "0.8.2"
tokenizers = "0.21.0"
safetensors = "0.5.2"
candle-core = "0.8.2"
candle-nn = "0.8.2"
hf-hub = "0.4.1"

# Web
axum = { version = "0.8.1", features = ["macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# Local LLM
llama-cpp-2 = "0.1.91"
