[project]
name = "bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beir>=2.0.0",
    "pydantic>=2.10.5",
]

[[tool.uv.index]]
name = "Tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple"

[[tool.uv.index]]
name = "TUNA"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

[tool.mypy]
plugins = ['pydantic.mypy']
ignore_missing_imports = true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
