[project]
name = "bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beir>=2.0.0",
    "pydantic-settings>=2.7.1",
    "pydantic>=2.10.5",
    "types-pyyaml>=6.0.12.20241230",
    "bs4>=0.0.2",
    "openai>=1.66.3",
]

[[tool.uv.index]]
name = "Tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple"

[[tool.uv.index]]
name = "TUNA"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

[tool.mypy]
plugins = ['pydantic.mypy']
ignore_missing_imports = true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "types-requests>=2.32.0.20241016",
]
