[package]
name = "memd_rag"
version = "0.1.0"
edition = "2021"
description = "rag framework on edge"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# AI
candle-transformers = "0.8.2"
tokenizers = "0.21.0"
safetensors = "0.5.2"
candle-core = "0.8.2"
candle-nn = "0.8.2"
hf-hub = "0.4.1"

# Web
axum = { version = "0.8.1", features = ["macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# Local LLM
llama-cpp-2 = "0.1.91"
rusqlite = { version = "0.31.0", features = ["blob", "bundled"] }
refinery = { version = "0.8.14", features = ["rusqlite"] }
