[package]
name = "memd_server"
version = "0.1.0"
edition = "2021"

[dependencies]
memd_rag = { path = "../memd_rag" }

anyhow = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Web
axum = { version = "0.8.1", features = ["macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
